[gd_scene load_steps=4 format=3 uid="uid://bh3my8ljgw02s"]

[ext_resource type="Script" path="res://scripts/leaderboard.gd" id="1_h2pm8"]
[ext_resource type="StyleBox" uid="uid://dtbi1sq0ahxe" path="res://assets/art/ui/pink_button_style.tres" id="2_507k3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lj08p"]
bg_color = Color(0, 0, 0, 0.941176)

[node name="LeaderboardContainer" type="MarginContainer"]
visible = false
offset_right = 640.0
offset_bottom = 360.0
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lj08p")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="leaderboard" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
script = ExtResource("1_h2pm8")

[node name="all_score" type="Label" parent="PanelContainer/MarginContainer/leaderboard"]
layout_mode = 2
text = "Loading leaderboard"

[node name="player_score" type="Label" parent="PanelContainer/MarginContainer/leaderboard"]
layout_mode = 2
text = "Loading your score"

[node name="name_enter" type="LineEdit" parent="PanelContainer/MarginContainer/leaderboard"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
placeholder_text = "Enter your name"
max_length = 20

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/leaderboard"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="prev_page" type="Button" parent="PanelContainer/MarginContainer/leaderboard/HBoxContainer"]
custom_minimum_size = Vector2(150, 20)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("2_507k3")
text = "prev_page"

[node name="next_page" type="Button" parent="PanelContainer/MarginContainer/leaderboard/HBoxContainer"]
custom_minimum_size = Vector2(150, 20)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("2_507k3")
text = "next_page
"

[node name="close" type="Button" parent="PanelContainer/MarginContainer/leaderboard"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("2_507k3")
text = "close"

[connection signal="pressed" from="PanelContainer/MarginContainer/leaderboard/HBoxContainer/prev_page" to="PanelContainer/MarginContainer/leaderboard" method="_on_prev_page_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/leaderboard/HBoxContainer/next_page" to="PanelContainer/MarginContainer/leaderboard" method="_on_next_page_pressed"]
